# ollama-code

./: CLAUDE.md  Cargo.toml  README.md  SYSTEM_PROMPT.md
examples/hooks/: README.md  hooks.toml  rewrite-bash-to-native.sh
prompts/: review.md
scripts/: install.ps1  install.sh
skills/config/: SKILL.md
skills/self-modify/: SKILL.md
src/: agent.rs  backend.rs  cli.rs  commands.rs  config.rs  discovery.rs  format.rs  hooks.rs  lib.rs  llama_server.rs  main.rs  mcp.rs  message.rs  ollama.rs  pipe.rs  plugin.rs  process.rs  prompts.rs  runner.rs  session.rs  skills.rs  tools.rs  tui.rs
src/agent/: builder.rs  context.rs  edit_audit.rs  events.rs  mod.rs  plan.rs  planner.rs  subagent.rs  tool_executor.rs  util.rs
src/hooks/: discover.rs  exec.rs  mod.rs  types.rs
src/mcp/: connection.rs  http.rs  jsonrpc.rs  mod.rs  stdio.rs
src/ollama/: mod.rs  parse.rs  startup.rs  streaming.rs
src/tools/: bash.rs  edit.rs  evidence.rs  glob.rs  grep.rs  mod.rs  plan.rs  read.rs  skill.rs  subagent.rs  write.rs
src/tui/: app.rs  events.rs  markdown.rs  mod.rs  picker.rs  render.rs  settings.rs  syntax.rs  tree_browser.rs
src/tui/events/: agent_events.rs  commands.rs  input.rs  mod.rs  mouse.rs  picker.rs  server.rs
src/tui/render/: chat_content.rs  mod.rs
tests/: agent_basic.rs  agent_retries.rs  hooks_execution.rs  hooks_matching.rs  mcp_integration.rs  plugin_config.rs  plugin_discovery.rs  plugin_execution.rs  plugin_integration.rs  session.rs  skills.rs  subagent.rs
tests/fixtures/: mcp_test_server.py
tests/harness/: mod.rs
