[package]
name = "ollama-code"
version = "0.4.0"
edition = "2021"
description = "A CLI agent built on Ollama"

[[bin]]
name = "ollama-code"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5"
futures = "0.3"
glob = "0.3.3"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
